--- a/product-inventory/MainWindow.xaml
+++ b/product-inventory/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:product_inventory"
         mc:Ignorable="d"
-        Title="MainWindow" Height="483.218" Width="784.17">
+        Title="MainWindow" Height="353.633" Width="531.056">
     <Grid>
         <Button x:Name="xbtnBuy" Content="Buy" HorizontalAlignment="Left" Margin="30,251,0,0" VerticalAlignment="Top" Width="457" Height="40" Click="btnBuy_Click"/>
         <Label x:Name="lproduct" Content="Product" HorizontalAlignment="Left" Margin="32,36,0,0" VerticalAlignment="Top" RenderTransformOrigin="-1.371,0.23"/>
@@ -13,8 +13,7 @@
         <TextBox x:Name="xtBAmount" HorizontalAlignment="Left" Height="23" Margin="118,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="tBAmount_TextChanged"/>
         <Button x:Name="xbtnAdd" Content="Add" HorizontalAlignment="Left" Margin="163,125,0,0" VerticalAlignment="Top" Width="75" Click="btnAdd_Click"/>
         <ComboBox x:Name="xcBProducts" HorizontalAlignment="Left" Margin="118,40,0,0" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="tBCart" HorizontalAlignment="Left" Height="173" Margin="643,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="123"/>
-        <ListBox x:Name="xlistBox" HorizontalAlignment="Left" Height="178" Margin="279,36,0,0" VerticalAlignment="Top" Width="208"/>
+        <ListBox x:Name="xlistBox" HorizontalAlignment="Left" Height="178" Margin="279,36,0,0" VerticalAlignment="Top" Width="208" SelectionChanged="xlistBox_SelectionChanged"/>
 
 
     </Grid>
